--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "ng2-kanban",
   "version": "0.1.0",
   "scripts": {
-    "start": "concurrently \"npm run tsc:w\" \"npm run lite\" ",    
+    "start": "concurrently \"npm run tsc:w\" \"npm run lite\" ",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "lite": "lite-server",
     "typings": "typings",
-    "postinstall": "typings install" 
+    "postinstall": "typings install"
   },
   "license": "ISC",
   "dependencies": {
@@ -22,7 +22,8 @@
   "devDependencies": {
     "concurrently": "^2.0.0",
     "lite-server": "^2.1.0",
+    "tslint": "^3.6.0",
     "typescript": "^1.8.7",
-    "typings":"^0.7.5"
+    "typings": "^0.7.5"
   }
 }
