--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@ngrx/store": "^1.3.3",
     "angular2": "2.0.0-beta.9",
-    "systemjs": "0.19.24",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
+    "seamless-immutable": "^5.1.1",
+    "systemjs": "0.19.24",
     "zone.js": "0.5.15"
   },
   "devDependencies": {
