Adds initial karma-jasmine testing support incl. coverage (base on http://blog.devcross.net/2016/03/11/angular-2-typescript-codecoverage/)

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "start": "concurrently \"npm run watch\" \"npm run lite\" ",
     "watch": "watch \"tsc --outDir dist && tslint src/**/*.ts\" src",
     "build": "tsc --outDir dist && tslint src/**/*.ts",
+    "clean:reports": "rm -r ./report",
+    "remap-istanbul": "remap-istanbul -i ./report/coverage/coverage-final.json -o ./report/coverage/html-report -t html",
+    "test": "npm run clean:reports && npm run tsc && karma start && npm run remap-istanbul",
     "lite": "lite-server",
     "typings": "typings",
     "postinstall": "typings install"
@@ -23,7 +26,14 @@
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-coverage": "^0.5.5",
+    "karma-jasmine": "^0.3.7",
+    "karma-sourcemap-loader": "^0.3.7",
     "lite-server": "^2.1.0",
+    "remap-istanbul": "^0.5.1",
     "tslint": "^3.6.0",
     "typescript": "^1.8.7",
     "typings": "^0.7.5",
