--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.2",
     "karma-coverage": "^0.5.5",
+    "karma-coverage-allsources": "0.0.4",
     "karma-jasmine": "^0.3.7",
     "karma-sourcemap-loader": "^0.3.7",
     "lite-server": "^2.1.0",
