--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "karma-coverage": "^0.5.5",
     "karma-coverage-allsources": "0.0.4",
     "karma-jasmine": "^0.3.7",
+    "karma-mocha-reporter": "^2.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "lite-server": "^2.1.0",
     "remap-istanbul": "^0.5.1",
