Adds support for sinon

--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "karma-coverage-allsources": "0.0.4",
     "karma-jasmine": "^0.3.8",
     "karma-mocha-reporter": "^2.0.0",
+    "karma-sinon": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.7",
     "lite-server": "^2.1.0",
     "remap-istanbul": "^0.5.1",
+    "sinon": "^1.17.3",
     "tslint": "^3.6.0",
     "typescript": "^1.8.9",
     "typings": "^0.7.9",
