--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "angular2": "2.0.0-beta.12",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.35.0",
+    "normalize.css": "^4.0.0",
     "redux-typed-ducks": "^0.2.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
