--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "seamless-immutable": "^5.1.1",
+    "skeleton-css": "^2.0.4",
     "systemjs": "0.19.24",
     "zone.js": "0.6.6"
   },
