--- a/package.json
+++ b/package.json
@@ -3,47 +3,60 @@
   "version": "0.1.0",
   "description": "An attempt to create a slightly more complex application instead of a boring todo list.",
   "scripts": {
-    "start": "concurrently \"npm run watch\" \"npm run lite\" ",
-    "watch": "concurrently \"npm run watch:build\" \"karma start --auto-watch --no-single-run\"",
-    "watch:build": "watch \"tsc --outDir dist && tslint src/**/*.ts\" src",
-    "build": "tsc --outDir dist && tslint src/**/*.ts",
-    "remap-istanbul": "remap-istanbul -i ./coverage/coverage-final.json -o ./coverage -t html",
-    "test": "tsc --outDir dist && karma start && npm run remap-istanbul",
-    "lite": "lite-server",
-    "typings": "typings",
+    "start": "webpack-dev-server --inline --progress --port 8080",
+    "test": "karma start",
+    "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
     "postinstall": "typings install"
   },
   "license": "ISC",
   "dependencies": {
-    "@ngrx/store": "^1.3.3",
-    "angular2": "2.0.0-beta.15",
-    "es6-shim": "^0.35.0",
-    "normalize.css": "^4.1.1",
+    "@angular/common": "~2.0.2",
+    "@angular/compiler": "~2.0.2",
+    "@angular/core": "~2.0.2",
+    "@angular/forms": "~2.0.2",
+    "@angular/http": "~2.0.2",
+    "@angular/platform-browser": "~2.0.2",
+    "@angular/platform-browser-dynamic": "~2.0.2",
+    "@angular/router": "~3.0.2",
+    "@angular/upgrade": "~2.0.2",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "^2.2.1",
+    "core-js": "^2.4.1",
+    "normalize.css": "^5.0.0",
     "redux-typed-ducks": "^0.2.0",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "5.0.0-beta.12",
     "seamless-immutable": "^6.0.1",
     "skeleton-css": "^2.0.4",
-    "systemjs": "0.19.26",
-    "zone.js": "0.6.10"
+    "systemjs": "0.19.39",
+    "zone.js": "^0.6.25"
   },
   "devDependencies": {
-    "concurrently": "^2.0.0",
+    "angular2-template-loader": "^0.5.0",
+    "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.15.0",
     "jasmine-core": "^2.4.1",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.3",
-    "karma-coverage": "^0.5.5",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.0.0",
     "karma-coverage-allsources": "0.0.4",
-    "karma-jasmine": "^0.3.8",
+    "karma-jasmine": "^1.0.2",
     "karma-mocha-reporter": "^2.0.2",
+    "karma-phantomjs-launcher": "^1.0.2",
     "karma-sinon": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.7",
-    "lite-server": "^2.2.0",
+    "karma-webpack": "^1.8.0",
+    "phantomjs-prebuilt": "^2.1.13",
     "remap-istanbul": "^0.6.3",
-    "sinon": "^1.17.3",
+    "style-loader": "^0.13.1",
+    "ts-loader": "^0.8.1",
     "tslint": "^3.8.0",
-    "typescript": "^1.8.10",
-    "typings": "^0.7.12",
-    "watch": "^0.17.1"
+    "typescript": "^2.0.3",
+    "typings": "^1.4.0",
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1"
   }
 }
