--- a/package.json
+++ b/package.json
@@ -5,57 +5,57 @@
   "scripts": {
     "start": "webpack-dev-server --inline --progress --port 8080",
     "test": "karma start",
-    "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail"
+    "build": "rimraf dist && webpack --progress --profile --bail"
   },
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "~2.1.1",
-    "@angular/compiler": "~2.1.1",
-    "@angular/core": "~2.1.1",
-    "@angular/forms": "~2.1.1",
-    "@angular/http": "~2.1.1",
-    "@angular/platform-browser": "~2.1.1",
-    "@angular/platform-browser-dynamic": "~2.1.1",
-    "@angular/router": "~3.1.1",
-    "@angular/upgrade": "~2.1.1",
-    "@ngrx/core": "^1.2.0",
-    "@ngrx/store": "^2.2.1",
-    "@types/core-js": "^0.9.34",
-    "@types/jasmine": "^2.5.35",
-    "@types/node": "^6.0.45",
-    "core-js": "^2.4.1",
-    "normalize.css": "^5.0.0",
-    "redux-typed-ducks": "^0.2.0",
+    "@angular/common": "^4.4.5",
+    "@angular/compiler": "^4.4.5",
+    "@angular/core": "^4.4.5",
+    "@angular/forms": "^4.4.5",
+    "@angular/http": "^4.4.5",
+    "@angular/platform-browser": "^4.4.5",
+    "@angular/platform-browser-dynamic": "^4.4.5",
+    "@angular/router": "^4.4.5",
+    "@angular/upgrade": "^4.4.5",
+    "@ngrx/store": "^4.0.3",
+    "@types/core-js": "^0.9.43",
+    "@types/node": "^8.0.34",
+    "core-js": "^2.5.1",
+    "normalize.css": "^7.0.0",
+    "redux-typed-ducks": "^0.3.0",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.0-beta.12",
-    "seamless-immutable": "^6.3.0",
+    "rxjs": "^5.4.3",
+    "seamless-immutable": "^7.1.2",
     "skeleton-css": "^2.0.4",
-    "zone.js": "^0.6.26"
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "angular2-template-loader": "^0.5.0",
-    "css-loader": "^0.25.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.24.0",
+    "@ngtools/webpack": "^1.7.4",
+    "@types/jasmine": "^2.6.0",
+    "angular2-template-loader": "^0.6.2",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.1",
+    "file-loader": "^1.1.5",
+    "html-loader": "^0.5.1",
+    "html-webpack-plugin": "^2.30.1",
     "jasmine-core": "^2.4.1",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.0.0",
     "karma-coverage-allsources": "0.0.4",
-    "karma-jasmine": "^1.0.2",
+    "karma-jasmine": "^1.1.0",
     "karma-mocha-reporter": "^2.0.2",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.8.0",
+    "karma-webpack": "^2.0.5",
     "phantomjs-prebuilt": "^2.1.13",
     "remap-istanbul": "^0.7.0",
-    "style-loader": "^0.13.1",
-    "ts-loader": "^0.9.5",
-    "tslint": "^3.8.0",
-    "typescript": "^2.0.3",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1"
+    "style-loader": "^0.19.0",
+    "ts-loader": "^2.3.7",
+    "tslint": "^5.7.0",
+    "typescript": "^2.5.3",
+    "webpack": "^3.7.1",
+    "webpack-dev-server": "^2.9.1"
   }
 }
