--- a/package.json
+++ b/package.json
@@ -9,28 +9,27 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "~2.1.1",
-    "@angular/compiler": "~2.1.1",
-    "@angular/core": "~2.1.1",
-    "@angular/forms": "~2.1.1",
-    "@angular/http": "~2.1.1",
-    "@angular/platform-browser": "~2.1.1",
-    "@angular/platform-browser-dynamic": "~2.1.1",
-    "@angular/router": "~3.1.1",
-    "@angular/upgrade": "~2.1.1",
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^2.2.1",
-    "@types/core-js": "^0.9.34",
-    "@types/jasmine": "^2.5.35",
-    "@types/node": "^6.0.45",
-    "core-js": "^2.4.1",
-    "normalize.css": "^5.0.0",
     "redux-typed-ducks": "^0.2.0",
+    "@angular/common": "^4.4.5",
+    "@angular/compiler": "^4.4.5",
+    "@angular/core": "^4.4.5",
+    "@angular/forms": "^4.4.5",
+    "@angular/http": "^4.4.5",
+    "@angular/platform-browser": "^4.4.5",
+    "@angular/platform-browser-dynamic": "^4.4.5",
+    "@angular/router": "^4.4.5",
+    "@angular/upgrade": "^4.4.5",
+    "@types/core-js": "^0.9.43",
+    "@types/node": "^8.0.34",
+    "core-js": "^2.5.1",
+    "normalize.css": "^7.0.0",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.0-beta.12",
-    "seamless-immutable": "^6.3.0",
+    "rxjs": "^5.4.3",
+    "seamless-immutable": "^7.1.2",
     "skeleton-css": "^2.0.4",
-    "zone.js": "^0.6.26"
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
     "angular2-template-loader": "^0.5.0",
