--- a/package.json
+++ b/package.json
@@ -4,25 +4,25 @@
   "description": "An attempt to create a slightly more complex application instead of a boring todo list.",
   "scripts": {
     "start": "webpack-dev-server --inline --progress --port 8080",
-    "test": "karma start",
+    "test": "karma start config/karma.conf.js",
     "build": "rimraf dist && webpack --progress --profile --bail"
   },
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "^4.4.5",
-    "@angular/compiler": "^4.4.5",
-    "@angular/core": "^4.4.5",
-    "@angular/forms": "^4.4.5",
-    "@angular/http": "^4.4.5",
-    "@angular/platform-browser": "^4.4.5",
-    "@angular/platform-browser-dynamic": "^4.4.5",
-    "@angular/router": "^4.4.5",
-    "@angular/upgrade": "^4.4.5",
-    "@ngrx/store": "^4.0.3",
+    "@angular/common": "^5.2.4",
+    "@angular/compiler": "^5.2.4",
+    "@angular/core": "^5.2.4",
+    "@angular/forms": "^5.2.4",
+    "@angular/http": "^5.2.4",
+    "@angular/platform-browser": "^5.2.4",
+    "@angular/platform-browser-dynamic": "^5.2.4",
+    "@angular/router": "^5.2.4",
+    "@angular/upgrade": "^5.2.4",
+    "@ngrx/store": "^5.0.0",
     "@types/core-js": "^0.9.43",
-    "@types/node": "^8.0.34",
+    "@types/node": "^9.4.5",
     "core-js": "^2.5.1",
-    "normalize.css": "^7.0.0",
+    "normalize.css": "^8.0.0",
     "redux-typed-ducks": "^0.3.0",
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.4.3",
@@ -39,7 +39,7 @@
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
     "jasmine-core": "^2.4.1",
-    "karma": "^1.3.0",
+    "karma": "^2.0.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.0.0",
     "karma-coverage-allsources": "0.0.4",
@@ -49,9 +49,9 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.5",
     "phantomjs-prebuilt": "^2.1.13",
-    "remap-istanbul": "^0.7.0",
-    "style-loader": "^0.19.0",
-    "ts-loader": "^2.3.7",
+    "remap-istanbul": "^0.10.1",
+    "style-loader": "^0.20.1",
+    "ts-loader": "^3.5.0",
     "tslint": "^5.7.0",
     "typescript": "^2.5.3",
     "webpack": "^3.7.1",
